--- a/IBDesignable_Sample/Screens/View/SubCardView.xib
+++ b/IBDesignable_Sample/Screens/View/SubCardView.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SubCardView" customModule="IBDesignable_Sample" customModuleProvider="target">
             <connections>
+                <outlet property="cardView" destination="aed-N0-HYA" id="y0C-PQ-gcJ"/>
                 <outlet property="categoryLabel" destination="lzP-7l-wzf" id="ADw-uu-N8w"/>
                 <outlet property="imageView" destination="G3S-6u-RBd" id="YPz-Ss-xA1"/>
                 <outlet property="nameLabel" destination="eRO-bI-4fV" id="pWH-FJ-lRi"/>
@@ -19,11 +20,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="WH3-CD-ZKv">
-            <rect key="frame" x="0.0" y="0.0" width="435" height="170"/>
+            <rect key="frame" x="0.0" y="0.0" width="435" height="158"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aed-N0-HYA" userLabel="Card View">
-                    <rect key="frame" x="16" y="10" width="403" height="150"/>
+                    <rect key="frame" x="16" y="10" width="403" height="138"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sakura_picture" translatesAutoresizingMaskIntoConstraints="NO" id="G3S-6u-RBd">
                             <rect key="frame" x="8" y="10" width="80" height="80"/>
@@ -33,13 +34,13 @@
                             </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="dUf-hh-PyA">
-                            <rect key="frame" x="96" y="10" width="299" height="130"/>
+                            <rect key="frame" x="96" y="10" width="299" height="118"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ig-aK-v9V" userLabel="Name Base View">
-                                    <rect key="frame" x="0.0" y="0.0" width="299" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="299" height="23.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="さくら" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eRO-bI-4fV">
-                                            <rect key="frame" x="8" y="4" width="283" height="42"/>
+                                            <rect key="frame" x="8" y="0.0" width="283" height="19.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -47,17 +48,17 @@
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
+                                        <constraint firstItem="eRO-bI-4fV" firstAttribute="top" secondItem="3ig-aK-v9V" secondAttribute="top" id="JSz-BO-ZPY"/>
                                         <constraint firstItem="eRO-bI-4fV" firstAttribute="leading" secondItem="3ig-aK-v9V" secondAttribute="leading" constant="8" id="RvN-c7-8DF"/>
                                         <constraint firstAttribute="bottom" secondItem="eRO-bI-4fV" secondAttribute="bottom" constant="4" id="Z3v-rX-Ig3"/>
-                                        <constraint firstItem="eRO-bI-4fV" firstAttribute="top" secondItem="3ig-aK-v9V" secondAttribute="top" constant="4" id="qvM-7e-8yI"/>
                                         <constraint firstAttribute="trailing" secondItem="eRO-bI-4fV" secondAttribute="trailing" constant="8" id="xpJ-2k-hyX"/>
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ddn-TZ-UVS" userLabel="Category  Base View">
-                                    <rect key="frame" x="0.0" y="50" width="299" height="30"/>
+                                    <rect key="frame" x="0.0" y="23.5" width="299" height="45.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="バラ科モモ亜科スモモ属" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lzP-7l-wzf">
-                                            <rect key="frame" x="8" y="4" width="283" height="22"/>
+                                            <rect key="frame" x="8" y="4" width="283" height="37.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -72,10 +73,10 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rcv-My-X4h" userLabel="Outline Base View">
-                                    <rect key="frame" x="0.0" y="80" width="299" height="50"/>
+                                    <rect key="frame" x="0.0" y="69" width="299" height="49"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sample Sample Sample Sample Sample Sample Sample Sample Sample Sample Sample Sample" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="efq-wV-F8L" userLabel="Outline Text Label">
-                                            <rect key="frame" x="8" y="4" width="283" height="42"/>
+                                            <rect key="frame" x="8" y="4" width="283" height="41"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -113,7 +114,7 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="btj-jp-kbr"/>
-            <point key="canvasLocation" x="1176.8" y="-519.04047976011998"/>
+            <point key="canvasLocation" x="1176.8" y="-524.43778110944527"/>
         </view>
     </objects>
     <resources>
