--- a/UIComponent/SubCardView/SubCardView.xib
+++ b/UIComponent/SubCardView/SubCardView.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SubCardView" customModule="IBDesignable_Sample" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SubCardView" customModule="UIComponent">
             <connections>
                 <outlet property="cardView" destination="aed-N0-HYA" id="y0C-PQ-gcJ"/>
                 <outlet property="categoryLabel" destination="lzP-7l-wzf" id="ADw-uu-N8w"/>
@@ -55,10 +55,10 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ddn-TZ-UVS" userLabel="Category  Base View">
-                                    <rect key="frame" x="0.0" y="23.5" width="299" height="45.5"/>
+                                    <rect key="frame" x="0.0" y="23.5" width="299" height="44.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="バラ科モモ亜科スモモ属" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lzP-7l-wzf">
-                                            <rect key="frame" x="8" y="4" width="283" height="37.5"/>
+                                            <rect key="frame" x="8" y="4" width="283" height="36.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -73,10 +73,10 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rcv-My-X4h" userLabel="Outline Base View">
-                                    <rect key="frame" x="0.0" y="69" width="299" height="49"/>
+                                    <rect key="frame" x="0.0" y="68" width="299" height="50"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sample Sample Sample Sample Sample Sample Sample Sample Sample Sample Sample Sample" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="efq-wV-F8L" userLabel="Outline Text Label">
-                                            <rect key="frame" x="8" y="4" width="283" height="41"/>
+                                            <rect key="frame" x="8" y="4" width="283" height="42"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
